Temporary remove project.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div class = "item">
 					<div class = "item-title">Too</div>
 						<div class = "item-content">
-							Inspired by code and start his<br/> coding and incredible journey until now...<br/>
+							Inspired by code and started his<br/> coding and incredible journey until now...<br/>
 							<span>- Web Design - Web Development - Game Development -</span>
 						</div>
 					</div>
@@ -54,10 +54,9 @@
 		<div id = "slide3" class = "slide">
 			<div class = "slide-content">
 				<div class = "item">
-					<div class = "item-title">To know more about him</div>
+					<div class = "item-title">More information coming soon</div>
 						<div class = "item-content">
 						</div>
-					<button id="btn-project" data-url="project.html" data-name="project"><i class="oscillate oscillate-left material-icons">fiber_manual_record</i><span>Click Here</span><i class="oscillate oscillate-right material-icons">fiber_manual_record</i></button>
 				</div>
 			</div>
 		</div>
