--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 
 		<div id = "slide1" class = "slide slidemain">
-			<video class= "background" loop muted autoplay preload="auto" poster = "asset/img/backgroundvideoframe.png">
+			<video class= "background" playsinline loop muted autoplay preload="auto" poster = "asset/img/backgroundvideoframe.png">
 				<source src="asset/video/backgroundvideo.mp4" type="video/mp4">
 				<img src="asset/img/backgroundvideoframe.png">
 			</video>
