--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<div class="preloader-wrapper">
 		<div class = "preloader"><div class = "before"><div></div></div><div class = "after"></div></div>
 		<div class = "preloader-text">Loading...</div>
+		<div class = "preload"><img src="asset/img/pic1.jpg"></div>
 	</div>
 	<div id = 'main-wrapper'>
 	<div id = 'inner-wrapper'>
