--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 		<div class = "preloader"><div class = "before"><div></div></div><div class = "after"></div></div>
 		<div class = "preloader-text">Loading...</div>
 		<div class = "preload"><img src="asset/img/pic1.jpg"></div>
+		<div class = "preload">
+			<video class= "background" playsinline loop muted autoplay preload="auto" poster = "asset/img/backgroundvideoframe.png">
+				<source src="asset/video/backgroundvideo.mp4" type="video/mp4">
+				<img src="asset/img/backgroundvideoframe.png">
+			</video>
+		</div>
 	</div>
 	<div id = 'main-wrapper'>
 	<div id = 'inner-wrapper'>
