Fix loadingscreen bug

--- a/project.html
+++ b/project.html
@@ -15,6 +15,7 @@
 <body>
 	<div class="preloader-wrapper">
 		<div class = "preloader"><div class = "before"><div></div></div><div class = "after"></div></div>
+		<div class = "preloader-text">Loading...</div>
 	</div>
 	<div id = "main-wrapper">
 	<div id = "inner-wrapper">
