--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				<div class = "item">
 					<div class = "item-title">More information coming soon</div>
 						<div class = "item-content">
+							<button href="file:///C:/Users/Too/Desktop/Project/weiweitoo.github.io/project.html" id = "btn-project">dee</button>
 						</div>
 				</div>
 			</div>
