--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<div class = "item">
 					<div class = "item-title">More information coming soon</div>
 						<div class = "item-content">
-							<button href="hitoo.co/project.html" id = "btn-project">dee</button>
+							<button href="project.html" id = "btn-project">dee</button>
 						</div>
 				</div>
 			</div>
