fix ajax and history html5 issue

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<ul>
 				<li><span class="selected"></span><button onclick = "animationScrollSlide('1')">Home</button></li>
 				<li><span class="selected"></span><button onclick = "animationScrollSlide('2')">About Me</button></li>
-				<li><span class="selected"></span><button onclick = "animationScrollSlide('3')">My Projects</button></li>
+				<li><span class="selected"></span><button onclick = "animationScrollSlide('3')">Projects</button></li>
 			</ul>
 		</div>
 
@@ -62,9 +62,9 @@
 		<div id = "slide3" class = "slide">
 			<div class = "slide-content">
 				<div class = "item">
-					<div class = "item-title">More information coming soon</div>
+					<div class = "item-title"></div>
 						<div class = "item-content">
-							<button href="project.html" id = "btn-project">dee</button>
+							<div>Check Out <button href="project.html" id = "btn-project">Projects</button></div>
 						</div>
 				</div>
 			</div>
