--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
 			<div id = 'project-1' class = "project">
 				<div class = "project-content">
 					<div class = "item">
-						<div class = "item-title">1. Can you get 1024?</div>
+						<div class = "item-title">Under Renovation</div>
 						<div class = "item-content">
 							It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
 						</div>
@@ -37,7 +37,7 @@
 			<div id = 'project-2' class = "project">
 				<div class = "project-content">
 					<div class = "item">
-						<div class = "item-title">2. Can you get 1024?</div>
+						<div class = "item-title">Under Renovation</div>
 						<div class = "item-content">
 							It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
 						</div>
@@ -50,7 +50,7 @@
 			<div id = 'project-3' class = "project">
 				<div class = "project-content">
 					<div class = "item">
-						<div class = "item-title">3. Can you get 1024?</div>
+						<div class = "item-title">Under Renovation</div>
 						<div class = "item-content">
 							It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
 						</div>
@@ -63,7 +63,7 @@
 			<div id = 'project-4' class = "project">
 				<div class = "project-content">
 					<div class = "item">
-						<div class = "item-title">4. Can you get 1024?</div>
+						<div class = "item-title">Under Renovation</div>
 						<div class = "item-content">
 							It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
 						</div>
