Optimized loading speed and restyle some css code style

--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="asset/css/style.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/foundation.css">
-	<script type="text/javascript" src = "asset/js/jquery.min.js"></script>
-	<script type="text/javascript" src = "asset/js/app.js"></script>
-	<script type="text/javascript" src = "asset/js/history.js"></script>
-	<script type="text/javascript" src = "asset/js/particles.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Abel|Exo|Rajdhani|Source+Code+Pro|Eczar" rel="stylesheet">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link href="https://fonts.googleapis.com/css?family=Abel|Exo|Rajdhani|Source+Code+Pro|Material+Icons" rel="stylesheet">
 </head>
 <body>
 	<div class="preloader-wrapper">
@@ -75,6 +70,11 @@
 
 	</div>
 	</div>
+
+	<script type="text/javascript" src = "asset/js/jquery.min.js"></script>
+	<script type="text/javascript" src = "asset/js/app.js"></script>
+	<script type="text/javascript" src = "asset/js/history.js"></script>
+	<script type="text/javascript" src = "asset/js/particles.js"></script>
 </body>
 </html>
 
