--- a/project.html
+++ b/project.html
@@ -3,8 +3,7 @@
 <head>
 	<title>Too | Project</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Abel|Exo|Rajdhani|Source+Code+Pro|Eczar" rel="stylesheet">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link href="https://fonts.googleapis.com/css?family=Abel|Exo|Rajdhani|Source+Code+Pro|Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="asset/css/foundation.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/style.css">
 </head>
