Do some translation. Remove link to project.html

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 					<div class = "item-title">Too</div>
 						<div class = "item-content">
 							Inspired by code and started his<br/> coding and incredible journey until now...<br/>
-							<span>- Web Design - Web Development - Game Development -</span>
+							<span>- FullStack Engineer - Game Engineer - Data Scientist -</span>
 						</div>
 					</div>
 			</div>
@@ -59,8 +59,7 @@
 				<div class = "item">
 					<div class = "item-title"></div>
 						<div class = "item-content">
-							<!-- <div>Check Out <button href="project.html" id = "btn-project">Projects</button></div> -->
-							<div href="project.html">Under Renovation</div>
+							<div>Check out <a id="btn-project" href="https://github.com/weiweitoo">project</a></div>
 						</div>
 				</div>
 			</div>
