Done integrating Google analyctic to all pages. Reorganize the folder

--- a/comment-policy.html
+++ b/comment-policy.html
@@ -7,4 +7,14 @@ Comments deemed to be spam or solely promotional in nature will be deleted. Incl
 - Comments that harass other posters will be deleted. Please be respectful toward other contributors.
 - Anonymous comments will be deleted. We only accept comment from posters who identify themselves.
 
-The owner of this blog reserves the right to edit or delete any comments submitted to the blog without notice. This comment policy is subject to change at any time. If you have any questions on the commenting policy, please let us know at [blog contact information].
+The owner of this blog reserves the right to edit or delete any comments submitted to the blog without notice. This comment policy is subject to change at any time. If you have any questions on the commenting policy, please let us know at www.hitoo.co.
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135774271-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135774271-1');
+</script>
