--- a/about.html
+++ b/about.html
@@ -3,78 +3,94 @@
 <head>
 	<title>Too</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Abel|Exo|Rajdhani|Source+Code+Pro|Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="asset/css/foundation.css">
-	<link rel="stylesheet" type="text/css" href="asset/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Abel|Rajdhani|Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/foundation.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta charset="UTF-8">
+	<meta content="About Too" property="og:title">
+	<meta content="https://www.hitoo.co/" property="og:url">
+	<meta content="https://www.hitoo.co/assets/images/avatar.jpg" property="og:image">
+	<meta content="A Fullstack Engineer. A Game Engineer. A Data Scientist" property="og:description">
+	<meta name="theme-color" content="#2568a3">
 </head>
 <body>
 	<div class="preloader-wrapper">
 		<div class = "preloader"><div class = "before"><div></div></div><div class = "after"></div></div>
 		<div class = "preloader-text">Loading...</div>
-		<div class = "preload"><img src="asset/img/pic1.jpg"></div>
+		<div class = "preload"><img src="assets/images/pic1.jpg"></div>
 		<div class = "preload">
-			<video class= "background" playsinline loop muted autoplay preload="auto" poster = "asset/img/backgroundvideoframe.png">
-				<source src="asset/video/backgroundvideo.mp4" type="video/mp4">
-				<img src="asset/img/backgroundvideoframe.png">
+			<video class= "background" playsinline loop muted autoplay preload="auto" poster = "assets/images/backgroundvideoframe.png">
+				<source src="assets/video/backgroundvideo.mp4" type="video/mp4">
+				<img src="assets/images/backgroundvideoframe.png">
 			</video>
 		</div>
 	</div>
 	<div id = 'main-wrapper'>
-	<div id = 'inner-wrapper'>
+		<div id = 'inner-wrapper'>
 
-		<div class = "nav-bar">
-			<ul>
-				<li><span class="selected"></span><button onclick = "animationScrollSlide('1')">Home</button></li>
-				<li><span class="selected"></span><button onclick = "animationScrollSlide('2')">About Me</button></li>
-				<li><span class="selected"></span><button onclick = "animationScrollSlide('3')">Projects</button></li>
-			</ul>
-		</div>
-
-		<div id = "slide1" class = "slide slidemain">
-			<video class= "background" playsinline loop muted autoplay preload="auto" poster = "asset/img/backgroundvideoframe.png">
-				<source src="asset/video/backgroundvideo.mp4" type="video/mp4">
-				<img src="asset/img/backgroundvideoframe.png">
-			</video>
-			<div class = "blacklayer"></div>
-			<div class = "slide-content">
-				<div class = "tagline"></div>
+			<div class = "nav-bar">
+				<ul>
+					<li><span class="selected"></span><button onclick = "animationScrollSlide('1')">Home</button></li>
+					<li><span class="selected"></span><button onclick = "animationScrollSlide('2')">About Me</button></li>
+					<li><span class="selected"></span><button onclick = "animationScrollSlide('3')">Projects</button></li>
+				</ul>
 			</div>
-		</div>
 
-		<div id = "slide2" class = "slide">
-			<div class = "skybluelayer"></div>
-			<div class = "slide-content">
-				<div class = "item">
-					<div class = "item-title">Too</div>
-						<div class = "item-content">
-							Inspired by code and started his<br/> coding and incredible journey until now...<br/>
-							<span>- FullStack Engineer - Game Engineer - Data Scientist -</span>
-						</div>
-					</div>
+			<div id = "slide1" class = "slide slidemain">
+				<video class= "background" playsinline loop muted autoplay preload="auto" poster = "assets/images/backgroundvideoframe.png">
+					<source src="assets/video/backgroundvideo.mp4" type="video/mp4">
+					<img src="assets/images/backgroundvideoframe.png">
+				</video>
+				<div class = "blacklayer"></div>
+				<div class = "slide-content">
+					<div class = "tagline"></div>
+				</div>
 			</div>
-		</div>
 
-		<div id = "slide3" class = "slide">
-			<div class = "slide-content">
-				<div class = "item">
-					<div class = "item-title"></div>
-						<div class = "item-content">
-							<div>Check out <a id="btn-project" href="https://github.com/weiweitoo">project</a></div>
+			<div id = "slide2" class = "slide">
+				<div class = "skybluelayer"></div>
+				<div class = "slide-content">
+					<div class = "item">
+						<div class = "item-title">Too</div>
+							<div class = "item-content">
+								Inspired by code and started his<br/> coding and incredible journey until now...<br/>
+								<span>- FullStack Engineer - Game Engineer - Data Scientist -</span>
+							</div>
 						</div>
 				</div>
 			</div>
+
+			<div id = "slide3" class = "slide">
+				<div class = "slide-content">
+					<div class = "item">
+						<div class = "item-title"></div>
+							<div class = "item-content">
+								<div>Check out <a id="btn-project" href="https://github.com/weiweitoo">project</a></div>
+							</div>
+					</div>
+				</div>
+			</div>
+
+			<button onclick="previousSlide()" class="material-icons nav-arrow nav-up"></button>
+			<button onclick="nextSlide()" class="material-icons nav-arrow nav-down">keyboard_arrow_down</button>
+
 		</div>
-
-		<button onclick="previousSlide()" class="material-icons nav-arrow nav-up"></button>
-		<button onclick="nextSlide()" class="material-icons nav-arrow nav-down">keyboard_arrow_down</button>
-
-	</div>
 	</div>
 
-	<script type="text/javascript" src = "asset/js/jquery.min.js"></script>
-	<script type="text/javascript" src = "asset/js/app.js"></script>
-	<script type="text/javascript" src = "asset/js/history.js"></script>
-	<script type="text/javascript" src = "asset/js/particles.js"></script>
+	<script type="text/javascript" src = "//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src = "assets/js/app.js"></script>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135774271-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-135774271-1');
+	</script>
+
+
 </body>
 </html>
 
